efat: add grading
